     tracking is disabled for this object (allowing it to be taken multiple times
     even if it has an id).
   * New [remove_object] tag which removes applied [object]s from matched units;
     it can filter on the entire [object] WML. The most efficient use is to
     remove all objects with a specific duration value.
 * Lua API:
   * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The old
     function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
   * Added new function wesnoth.remove_modifications, which removes applied
     modifications of the chosen type from a unit. The most efficient use is to
     remove all modifications with a specific duration value.
     Also callable as u:remove_modifications.
   * The built-in conditionals have_unit, have_location, and variable are now
     present in the wesnoth.wml_conditionals table. This means they can be directly
     called, extended with new features, or even overridden with custom implementations.
   * New wesnoth.set_team_id function can change flag, color, or both; it automatically
     updates cached flag info for you (but you may still need to redraw to see it).
   * The wesnoth.place_shroud and wesnoth.clear_shroud functions can alter shroud data
     for a single side. They accept a list of locations, a shroud data string, or the
     special value "all".
   * New Lua API functions for altering AI:
     * wesnoth.switch_ai replaces the entire AI with a definition from a file
     * wesnoth.append_ai appends AI parameters to the configuation; supports goals,
       stages, and simple aspects.
       (Aspect tags are not fully parsed; only the id and facet subtags are used.)
     * wesnoth.add_ai_component, delete_ai_component, change_ai_component
       These do the work of the [modify_ai] tag for a single side.
   * Side proxy changes:
     * flag and flag_icon are never an empty string
     * New mutable keys: suppress_end_turn_confirmation, share_vision