@@ -24,6 +24,8 @@ Version 1.13.5+dev:
    * New [remove_object] tag which removes applied [object]s from matched units;
      it can filter on the entire [object] WML. The most efficient use is to
      remove all objects with a specific duration value.
+   * New key ability_type in standard unit filters, which matches if the unit has
+     any ability of the specified type (tag name).
  * Lua API:
    * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The old
      function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
